# prompt-compiler

./: .gitignore  README.md  prompt-compiler.yaml  pyproject.toml
prompt_compiler/: __init__.py  cli.py  code_generator.py  compiler.py  exceptions.py  formatters.py  prompt_reader.py  test_generator.py  utils.py  validator.py
prompt_compiler/ai_adapters/: __init__.py  base.py  claude_adapter.py  gpt_adapter.py
prompt_compiler/templates/: base_template.py  code_template.py  test_template.py
prompt_compiler/utils/: cache_manager.py  rate_limiter.py
prompts/: example.prompt  sum_numbers.prompt
tests/: test_compiler.py
